@@ -34,7 +34,11 @@ import com.github.springtestdbunit.annotation.DbUnitConfiguration;
 	DirtiesContextTestExecutionListener.class,
 	TransactionalTestExecutionListener.class,
 	DbUnitTestExecutionListener.class })
-@DbUnitConfiguration(databaseConnection={"schemaAuthDatabaseConnection", "schemaGitDatabaseConnection", "schemaReviewDatabaseConnection"})
+@DbUnitConfiguration(databaseConnection={
+		"schemaAuthDatabaseConnection", 
+		"schemaGitDatabaseConnection",
+		"schemaTraceabilityDatabaseConnection",
+		"schemaReviewDatabaseConnection"})
 public class OrganizationMemberMapRepositoryTest {
 	
 	@Autowired OrganizationMemberMapRepository repository;
@@ -78,7 +82,7 @@ public class OrganizationMemberMapRepositoryTest {
 				member, organization);
 		
 		assertEquals(allMaps.size(), 1);
-		assertEquals(allMaps.get(0).getMember().getId(), new Integer(1));
+		assertEquals(allMaps.get(0).getMember().getId(), Integer.valueOf(1));
 	}
 	
 	@Test
@@ -93,7 +97,7 @@ public class OrganizationMemberMapRepositoryTest {
 				member, organization, OrganizationMemberRole.MANAGER);
 		
 		assertEquals(managerMaps.size(), 1);
-		assertEquals(managerMaps.get(0).getMember().getId(), new Integer(1));
+		assertEquals(managerMaps.get(0).getMember().getId(), Integer.valueOf(1));
 		
 		List<OrganizationMemberMapBean> memberMaps = repository.fineByMemberAndOrganizationAndRole(
 				member, organization, OrganizationMemberRole.MEMBER);
